home slider visibility fix

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -15,18 +15,6 @@ body {
     src:url(/fonts/corporate_a_regular.eot) format("embedded-opentype"),url(/fonts/corporate_a_regular.woff) format("woff"),url(/fonts/corporate_a_regular.ttf) format("truetype"),url(/fonts/corporate_a_regular.svg#CorporateARegular) format("svg")
 }
 
-@keyframes fadeIn{
-  from{
-    opacity:0;
-    -webkit-transform:scale(0.75);
-    transform:scale(0.75)
-  }
-  to{
-    opacity:1;
-    -webkit-transform:scale(1);
-    transform:scale(1)
-  }
-}
 .imso_li__live-ind-mask{
   overflow:hidden
 }
@@ -204,8 +192,8 @@ body {
 .fadeIn {
   opacity:0;
   animation:1s cubic-bezier(1, -0.5, 0.5, 1) .1s normal forwards 1 fadeIn;
-  /*
   text-rendering: optimizeSpeed;
+  /*
   -webkit-animation-name:fadeIn;
   animation:fadeIn 1.5s cubic-bezier(1, -0.5, 0.5, 1);
   animation-delay: 3s;
@@ -217,7 +205,44 @@ body {
   animation:0.3s cubic-bezier(1, -0.5, 0.5, 1) .1s normal forwards 1 fadeIn;
 }
 
-@keyframes fadeInUp{
+.fadeInUp {
+  -webkit-animation-name:fadeInUp;
+  animation:fadeInUp 1.5s cubic-bezier(1, -0.5, 0.5, 1);
+}
+
+.fadeInUpFast {
+  -webkit-animation-name:fadeInUpFast;
+  animation:fadeInUpFast 1.5s cubic-bezier(1, -0.5, 0.5, 1);
+}
+
+.growUp {
+  -webkit-animation-name:growUp;
+  animation:growUp 1.5s cubic-bezier(1, -0.5, 0.5, 1);
+}
+
+@keyframes fadeIn{
+  from{
+    opacity:0;
+  }
+  to{
+    opacity:1;
+  }
+}
+
+@keyframes growUp{
+  from{
+    opacity:0;
+    -webkit-transform:scale(0.75);
+    transform:scale(0.75)
+  }
+  to{
+    opacity:1;
+    -webkit-transform:scale(1);
+    transform:scale(1)
+  }
+}
+
+@keyframes fadeInUpFast{
   from{
     opacity:0;
     -webkit-transform:translate3d(0,1000%,0);
@@ -230,10 +255,19 @@ body {
   }
 }
 
-.fadeInUp {
-  -webkit-animation-name:fadeInUp;
-  animation:fadeInUp 1.5s cubic-bezier(1, -0.5, 0.5, 1);
+@keyframes fadeInUp{
+  from{
+    opacity:0;
+    -webkit-transform:translate3d(0,10%,0);
+    transform:translate3d(0,10%,0)
+  }
+  to{
+    opacity:1;
+    -webkit-transform:none;
+    transform:none
+  }
 }
+
 
 .stop-scrolling {
   overflow: none;
